--- a/CRUDBlazorApp/Client/Pages/Index.razor
+++ b/CRUDBlazorApp/Client/Pages/Index.razor
@@ -1,9 +1,27 @@
 ﻿@page "/"
+@page "/search/{searchTerm}"
+@inject IProjectService ProjectService
 
-<PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<PageTitle>Home</PageTitle>
+    <Projects />
 
-Welcome to your new app.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+@code{
+    [Parameter]
+    public string? SearchTerm { get; set; } = null;
+
+    protected override async Task OnParametersSetAsync()
+    {
+        if(SearchTerm != null)
+        {
+            await ProjectService.SearchProjects(SearchTerm);
+        }
+        else
+        {
+            await ProjectService.GetProjects();
+        }
+        
+    }
+
+}
