--- a/CRUDBlazorApp/Client/Pages/Projects.razor
+++ b/CRUDBlazorApp/Client/Pages/Projects.razor
@@ -22,7 +22,7 @@
         </div>
     </div>
 }
-<button class="btn btn-primary" @onclick="CreateProject">Add Project</button>
+<button id="addProject" class="btn btn-primary" @onclick="CreateProject">Add Project</button>
 @code {
     protected override async Task OnInitializedAsync()
     {
