--- a/CRUDBlazorApp/Client/Pages/SingleForm.razor
+++ b/CRUDBlazorApp/Client/Pages/SingleForm.razor
@@ -104,7 +104,11 @@ else
     </div>
     <br />
     <button type="submit" class="btn btn-primary">@btnText</button>
-    <button type="button" class="btn btn-primary" @onclick="DeleteForm">Delete Form</button>
+    @if(Id != null)
+    {
+        <button type="button" class="btn btn-primary" @onclick="DeleteForm">Delete Form</button>
+    }
+    
 </EditForm>
 
 @code {
