--- a/CRUDBlazorApp/Client/Pages/SingleProject.razor
+++ b/CRUDBlazorApp/Client/Pages/SingleProject.razor
@@ -51,13 +51,14 @@ else
         <ValidationMessage For="@(() => project.State)" />
         
     </div>
-    <div class="form-group row">
-        <label for="assignedTo">Assigned To</label>
-        
-    </div>
+    
     <div class="form-group row">
         <button type="submit" class="btn btn-primary">@btnMsg</button>
-        <button type="button" class="btn btn-danger" @onclick="DeleteProject">Delete</button>
+        @if (Id != null)
+        {
+            <button type="button" class="btn btn-danger" @onclick="DeleteProject">Delete</button>
+        }
+        
     </div>
 </EditForm>
 <div class="text-danger">
@@ -75,9 +76,10 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        btnMsg = Id == null ? "Save New Form" : "Update Form";
+        btnMsg = Id == null ? "Save New Project" : "Update Project";
     }
 
+    //ENCAPSULATION
     protected override async Task OnParametersSetAsync()
     {
         if (Id == null)
