--- a/CRUDBlazorApp/Client/Shared/NavMenu.razor
+++ b/CRUDBlazorApp/Client/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">CRUDBlazorApp</a>
+        <a class="navbar-brand" href="">Rescom Environmental</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
